src/styles/Snippet.module.css
/* Common stylings that are used in ExperienceSnippet and EducationSnippet */
.snippetPaper {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    column-gap: 2rem;
    text-align: left;
    margin: auto;
    margin-top: 20px;
    padding-left: 1rem;
    padding-right: 1rem;
}
h3 {
    margin-top: 0rem;
    margin-bottom: 0rem;
}
h4 {
    margin-top: 0px;
    margin-bottom: 0px;
}
.org {
    display: flex;
    flex-wrap: wrap;
    justify-content: left;
    column-gap: 2rem;
}
.logo {
    flex-grow: 1;
    width: 150px;
    height: 150px;
    border-radius: 15%;
    margin: 20px;
    transition-duration: 0.5s;
}
.logo:hover {
    transition-duration: 0.5s;
}
.nameLocationWrapper {
    flex-grow: 2;
    margin-top: auto;
    margin-bottom: auto;
}
.nameLocation {
    flex-grow: 1;
    justify-content: left;
    margin-top: auto;
    margin-bottom: auto;

    padding-top: 1rem;
    padding-bottom: 1rem;
}
.name {
    width: 362px;
    text-decoration: none;
}
.name:hover {
    text-decoration: underline;
}
.location {
    margin-top: 0px;
    margin-bottom: 0px;
}

.detailsWrapper {
    justify-content: center;
    margin-top: auto;
    margin-bottom: auto;
    margin-left: 1rem;
    margin-right: 1rem;
}
.details {
    display: inline-block;
    text-align: left;
    margin: auto;
}
.detailsDegree {
    font-style: italic;
    white-space: pre-wrap;
    line-height: 0.7em;
    text-align: right;
}
.detailsDate {
    text-align: right;
}

.position {
    text-align: right;
}

